余俊超  模糊查询测试版

--- a/pom.xml
+++ b/pom.xml
@@ -277,6 +277,12 @@
 		</dependency>
         
         <dependency>
+	      <groupId>com.github.pagehelper</groupId>
+	      <artifactId>pagehelper</artifactId>
+	      <version>5.0.3</version>
+	    </dependency>
+    
+        <dependency>
             <groupId>org.kie</groupId>
             <artifactId>kie-spring</artifactId>
             <version>${drools.version}</version>
